<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cinseo</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Username</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="register">Register</string>
    <string name="reg">REGISTER</string>
    <string name="back">Back</string>
    <string name="conPassword">Confirm Password</string>
    <string name="cb1">Keep me Logged In</string>
    <string name="Search">Search Movie</string>
    <string name="srch">Enter a Movie you Like</string>
    <string name="sign_in">SIGN-IN</string>
    <string name="label1">Tab 1</string>
    <string name="label2">Tab 2</string>
    <string name="label3">Tab 3</string>
    <string name="delete_string">Clear</string>

</resources>
