<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dip" 
    android:background="@drawable/wood_1">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    	<TextView
        	android:id="@+id/textView1a"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/reg" 
        	android:textStyle="bold"
    		android:textColor="#FFFFFF"/>

    	<TextView
        	android:id="@+id/textView2a"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:layout_marginTop="24dp"
        	android:textSize="15.5sp"
        	android:text="@string/Email" 
        	android:textColor="#FFFFFF"
        	android:textStyle="bold"/>
     <EditText
            android:id="@+id/emaila"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
     <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/Password"
            android:textSize="15.5sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pswda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
      <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/conPassword"
            android:textSize="15.5sp" 
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/conpswda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
     
        
        <Button
            android:id="@+id/registera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/register" />
            
        <Button
            android:id="@+id/backa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
	</LinearLayout>
</ScrollView>
